--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "react-native-modal-datetime-picker": "^17.1.0",
     "react-native-pager-view": "6.3.0",
     "react-native-paper": "^5.12.3",
+    "react-native-pell-rich-editor": "^1.9.0",
     "react-native-reanimated": "~3.10.1",
     "react-native-safe-area-context": "4.10.1",
     "react-native-screens": "3.31.1",
@@ -59,6 +60,7 @@
     "react-native-tab-view": "^3.5.2",
     "react-native-vector-icons": "^10.1.0",
     "react-native-web": "~0.19.10",
+    "react-native-webview": "13.8.6",
     "react-native-windows": "^0.74.9",
     "react-navigation-collapsible": "^6.3.0",
     "react-navigation-transitions": "^1.0.12",
